// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render badge correctly 1`] = `
<div class="van-badge van-badge--top-right van-badge--fixed">
  1
</div>
`;

exports[`should render default slot correctly 1`] = `
<i class="van-badge__wrapper pps-icon pps-icon-success">
  Default Slot
</i>
`;

exports[`should render dot correctly 1`] = `
<div class="van-badge van-badge--top-right van-badge--dot van-badge--fixed">
</div>
`;

exports[`should render icon with builtin icon name correctly 1`] = `
<i class="van-badge__wrapper pps-icon pps-icon-success">
</i>
`;

exports[`should render icon with local image correctly 1`] = `
<i class="van-badge__wrapper pps-icon">
  <img class="pps-icon__image"
       src="/assets/icon.jpg"
  >
</i>
`;

exports[`should render icon with url name correctly 1`] = `
<i class="van-badge__wrapper pps-icon">
  <img class="pps-icon__image"
       src="https://img.yzcdn.com/icon.jpg"
  >
</i>
`;
